# koralibc

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  syscall_stubs.c  test_new_headers.c  test_simple  test_simple.c  test_stdarg  test_stdarg_functionality.c  test_stdio.c  test_stdio_simple  test_stdio_simple.c  test_stdio_working  test_stdio_working.c  test_types  test_types.c
docs/: PRD.md  README.md
include/: assert.h  errno.h  limits.h  stdarg.h  stdbool.h  stddef.h  stdint.h
include/kora/: ctype.h  stdio.h  stdlib.h  string.h
include/kora/sys/: types.h
src/: assert.c  ctype.c  errno.c  stdio.c  stdlib.c  string.c
src/stdio/: fclose.c  fgetc.c  fgets.c  fopen.c  fpos.c  fprintf.c  fputc.c  fputs.c  fread.c  fremove.c  freopen.c  fscanf.c  fseek.c  fstatus.c  fwrite.c  getc.c  getchar.c  gets.c  perror.c  printf.c  putc.c  putchar.c  puts.c  scanf.c  setbuf.c  setvbuf.c  snprintf.c  sprintf.c  sscanf.c  stdio_internal.c  stdio_internal.h  tempfile.c  ungetc.c  vfprintf.c  vfscanf.c  vprintf.c  vsnprintf.c  vsprintf.c  vsscanf.c
tests/: test_ctype.c  test_stdlib.c  test_string.c
